# infosec_webserver

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  diesel.toml
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/repository/: mod.rs  profile_repo.rs  user_repo.rs
src/application/security/: hasher.rs
src/application/service/: user_service.rs
src/domain/: mod.rs  request.rs  schema.rs  user.rs
src/domain/errors/: hashing.rs  mod.rs  service.rs
src/domain/models/: mod.rs  schema.rs  user.rs  user_profile.rs
src/infrastructure/: database.rs
src/infrastructure/migrations/2026-02-20-084428-0000_users/: down.sql  up.sql
src/infrastructure/migrations/2026-02-24-131713-0000_user_profile/: down.sql  up.sql
src/presentation/api/: server.rs
src/presentation/api/handlers/: auth_handler.rs  user_handler.rs
src/presentation/api/routes/: auth_routes.rs  user_routes.rs
