[package]
name = "infosec_webserver"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[lib]
name = "infosec_webserver_lib"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
diesel = "2.3.6"
diesel-async = { version = "0.7.4", features = ["mysql", "deadpool"] }
dotenvy = "0.15.7"
once_cell = "1.21.3"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
